--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --env jest",
     "lint-fix": "eslint . --fix --env jest",
     "cosmos": "cosmos",
+    "cosmos-export": "cross-env COSMOS_PUBLIC_URL='./' cosmos-export",
     "precommit": "yarn verify",
     "ratchet-coverage": "node config/ratchetCoverage.js",
     "verify": "yarn && yarn lint && yarn flow && yarn coverage && yarn ratchet-coverage"
@@ -31,6 +32,7 @@
     "classnames": "^2.2.5",
     "concurrently": "^3.6.1",
     "coveralls": "^3.0.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.3.0",
     "enzyme-react-adapter-future": "^1.1.3",
     "enzyme-to-json": "^3.3.4",
